welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (estFacaMur()){
	avance();
}
gauche(); avance();